--- a/cmd/xtracego/cli.cyamli.yaml
+++ b/cmd/xtracego/cli.cyamli.yaml
@@ -8,6 +8,12 @@ options:
     propagates: true
     description: |
       Whether to output verbose messages or not.
+  -seed:
+    type: integer
+    propagates: true
+    description: |
+      Random seed for reproductivity of rewritten source files.
+      If not specified, the seed is generated randomly.
   -trace-stmt:
     type: boolean
     default: 'true'
@@ -75,7 +81,13 @@ subcommands:
     arguments:
       - name: package
         description: |
-          Path to a local directory of the main package to be rewritten.
+          Package to be rewritten can be specified by path to a local directory or paths to local source files of a main package.
+          
+          When the package is specified with a local directory path, go.mod must be found at the ancestors of the current working directory.
+          Dependencies in the same module and external dependencies are resolved via the go.mod.
+          
+          When the package is specified with local source file paths, the source files must have extension .go, be in the same directory, be in the main package, and contain only one main function.
+          If go.mod is found at the ancestors of the current working directory, dependencies in the same module and external dependencies are resolved via the go.mod.
 
   build:
     description: |
@@ -96,7 +108,8 @@ subcommands:
     arguments:
       - name: package
         description: |
-          Path to a local directory of the main package to be rewritten.
+          Package to be rewritten and built.
+          The way to specify the package is as same as xtracego rewrite command.
 
   run:
     description: |
@@ -113,7 +126,9 @@ subcommands:
     arguments:
       - name: package
         description: |
-          Path to a local directory of the main package to be rewritten, followed by arguments to be passed to the main function.
+          Package to be rewritten and built.
+          The way to specify the package is as same as xtracego rewrite command.
+
       - name: arguments
         variadic: true
         description: |
