--- a/cmd/xtracego/cli.cyamli.yaml
+++ b/cmd/xtracego/cli.cyamli.yaml
@@ -12,7 +12,7 @@ options:
     type: integer
     propagates: true
     description: |
-      Random seed for reproductivity of rewritten source files.
+      Random seed for reproducibility of rewritten source files.
       If not specified, the seed is generated randomly.
   -trace-stmt:
     type: boolean
